<resources>
    <string name="app_name">VCall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="App_logo">This is App Logo</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="streams">Live Streams</string>
    <string name="setting">Setting</string>
    <string name="user_id">User ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="video_title">Video Title</string>
    <string name="video_description">Video Description</string>
    <string name="video_image">Video Image</string>
    <string name="registration">Register</string>
    <string name="watch">Watch</string>
    <string name="security">Security</string>
    <string name="stars">Stars</string>
    <string name="compose_shortcut_short_label0">Open</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_video_call">VideoCallActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="userid">User-ID</string>
    <string name="logout">Logout</string>
    <string name="interest">Interest</string>
    <string name="art">Art</string>
    <string name="business">Business</string>
    <string name="craft">Craft</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="call">Call</string>

</resources>