<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/videoimage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/video_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/videoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/video_title"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/videoDescription"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/video_description" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>