<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/le1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l1"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:orientation="horizontal"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/login_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l2"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/dark_blue"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/loginLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/l2"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/l2"
                    android:layout_marginTop="5dp"
                    android:imeOptions="actionNext"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    tools:ignore="TextViewEdits" />


                <TextView
                    android:id="@+id/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_button"
                    android:layout_marginTop="50dp"
                    android:text="@string/don_t_have_account"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue" />


            </RelativeLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/closeApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/white"
                android:foregroundGravity="center"
                android:src="@drawable/logout" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>